2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: argparse bug fixed

2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: argparse.Action classes for arguments using
	nargs, to prevent eating the configFile. argparse.Action class for the
	configFile to prevent it then overwriting the proper setting with None.
	* python/configManager.py: introduction of runOnlyNominalXSec: for
	fixSigXSec=True, run only the nominal fit instead of up and down
	* src/configMgr.cxx: idem

2012-12-19 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	M       python/fitConfig.py
	M       python/sample.py
	M       python/systematic.py
	* Option to replace channel systematics from that of different channel

2012-12-19 David Cote <david.cote@cern.ch>
	* Tagged HistFitter-00-00-22

2012-12-17  Zach Marshall <zach.marshall@cern.ch>
	* src/HypoTestTool.cxx: Adding some helpful debugging output
	* src/Utils: Moving to folder-based plots
	* macros/contours: Adding python-based plotting macros
 
2012-12-14 David Cote <david.cote@cern.ch>
	* Added configurable HypoTestName with syntax: myFitConfig.hypoTestName="MyName_200_100"
	* Bug fix in construction fitChannels string of GenerateFitAndPlot function in Utils.cxx

2012-12-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/sample.py: throw a warning for sample names starting with digits.
	For signal samples starting with a digit, HistFactory misses parameters in
	the workspace for unknown reasons. 

2012-12-11 Alex Koutsman <alex.koutsman@cern.ch>
	   * scripts/HistFitter.py : added -m/--minos option that must be run with an argument, either "ALL" or a space separate string of parameters
	   * src/Utils.cxx : added minos error calculation
	   * src/Utils.h : added minos error calculation

2012-15-10 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: allow nargs="+" for args.configFile, so that user