@@ -1,3 +1,6 @@
+2012-12-19 David Cote <david.cote@cern.ch>
+	* added blindVR option to configManager
+	
 2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* scripts/HistFitter.py: argparse bug fixed
 
